// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Larivaar /> renders children when disabled 1`] = `"Vahi Guru"`;

exports[`<Larivaar /> renders concatenated children when enabled 1`] = `
Array [
  <span
    key="0"
    style={
      Object {
        "color": "",
      }
    }
  />,
  <span
    key="1"
    style={
      Object {
        "color": "",
      }
    }
  />,
]
`;

exports[`<Larivaar /> renders odd words as orange when larivaarAssist is enabled 1`] = `
Array [
  <span
    key="0"
    style={
      Object {
        "color": "",
      }
    }
  />,
  <span
    key="1"
    style={
      Object {
        "color": "#f39c1d",
      }
    }
  />,
]
`;
